--- a/show.html
+++ b/show.html
@@ -60,6 +60,8 @@
 </section>
 <section class="row">
   <h2>Episodes</h2>
+  <div class="tabs" id="seasons-bar"></div>
+  <label class="season-select"><span style="margin-right:8px;color:#a7afc0">Season</span><select id="season-select"></select></label>
   <div id="row-episodes" class="cards"></div>
 </section>
 
