--- a/admin.html
+++ b/admin.html
@@ -1,2 +1,114 @@
 <!doctype html>
-<html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Admin — Upload to R2</title><meta name="theme-color" content="#0e0f12"/><link rel="icon" href="img/favicon.png" type="image/png"/><link rel="apple-touch-icon" href="img/favicon.png"/><link rel="stylesheet" href="reflix.css"/><style>.admin-wrap{max-width:1100px;margin:24px auto;padding:0 20px}.cardx{background:linear-gradient(180deg,#111827,#0b0f16);border:1px solid rgba(255,255,255,.08);border-radius:16px;padding:16px;margin-bottom:18px}.rowx{display:flex;gap:12px;flex-wrap:wrap;align-items:center}.muted{color:#a7afc0}.grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(280px,1fr));gap:12px}.item{padding:12px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px}.monosmall{font-family:ui-monospace,SFMono-Regular,Menlo,Consolas,monospace;font-size:12px}input[type=text],input[type=password]{width:280px;background:#0a0e15;border:1px solid rgba(255,255,255,.08);color:#e8edf5;padding:8px 12px;border-radius:10px;outline:none}input[type=text]:focus,input[type=password]:focus{box-shadow:0 0 0 4px rgba(59,130,246,.35)}.btn{background:#3b82f6;border:0;color:#fff;font-weight:700;padding:10px 16px;border-radius:12px;cursor:pointer}.btn.secondary{background:rgba(255,255,255,.08)}.drop{border:2px dashed rgba(255,255,255,.12);border-radius:14px;padding:18px;text-align:center}.progressbar{height:6px;background:rgba(255,255,255,.12);border-radius:6px;overflow:hidden;margin-top:8px}.progressbar>span{display:block;height:100%;background:#3b82f6;width:0%}.right{margin-left:auto}.path{font-weight:700}</style></head><body><header class="topbar"><div class="container topbar-inner"><a class="brand" href="index.html"><img src="img/logo-full.png" alt="logo"/></a><nav class="nav"><a href="index.html">Home</a><a href="shows.html">Shows</a></nav><div class="flex-grow"></div><button id="logoutBtn" class="btn secondary">Logout</button></div></header><main class="admin-wrap"><h1>Admin — R2 Browser & Uploader</h1><section id="login" class="cardx"><h3>Login</h3><div class="rowx"><input id="adminUser" type="text" placeholder="Username" autocomplete="username"/><input id="adminPass" type="password" placeholder="Password" autocomplete="current-password"/><button id="loginBtn" class="btn">Sign In</button><span class="muted" id="loginMsg"></span></div></section><section id="controls" class="cardx" style="display:none"><div class="rowx"><span>Path:</span><input id="path" type="text" value="" placeholder="e.g. Reese_s/The Pepperonis/Season 3/"/><button id="loadBtn" class="btn secondary">Load</button><span class="muted">Use trailing "/" for folders.</span><span class="right muted" id="whoami"></span></div></section><section id="listing" class="cardx" style="display:none"><div class="rowx"><h3>Objects</h3><button id="refreshBtn" class="btn secondary right">Refresh</button></div><div id="list" class="grid"></div></section><section id="uploader" class="cardx" style="display:none"><h3>Upload files</h3><div id="drop" class="drop"><p>Drag & drop files here or <input type="file" id="filePick" multiple/></p><p class="muted">Large files are uploaded using multipart upload.</p></div><div id="uploads"></div></section></main><script src="admin.js" defer></script></body></html>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Admin — R2 Browser & Uploader</title>
+
+  <!-- If you already have a site stylesheet, keep this. Otherwise you can remove it. -->
+  <link rel="stylesheet" href="reflix.css" />
+
+  <style>
+    :root { color-scheme: dark; }
+    body { margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Arial, sans-serif; background:#0b0f16; color:#e8edf5; }
+    .container { max-width: 1100px; margin: 0 auto; padding: 0 20px; }
+
+    .topbar { position:sticky; top:0; z-index:10; background:rgba(9,12,20,.75); backdrop-filter: blur(6px); border-bottom:1px solid rgba(255,255,255,.08); }
+    .topbar-inner { display:flex; align-items:center; height:56px; gap:12px; }
+    .brand img { height:28px; display:block; }
+    .nav a { color:#cbd5e1; text-decoration:none; margin-right:14px; font-weight:600; }
+    .flex-grow { flex:1; }
+
+    .admin-wrap { max-width:1100px; margin:24px auto; padding:0 20px; }
+    .cardx { background:linear-gradient(180deg,#111827,#0b0f16); border:1px solid rgba(255,255,255,.08); border-radius:16px; padding:16px; margin-bottom:18px; }
+    .rowx { display:flex; gap:12px; flex-wrap:wrap; align-items:center; }
+    .grid { display:grid; grid-template-columns:repeat(auto-fill,minmax(280px,1fr)); gap:12px; }
+    .item { padding:12px; background:rgba(255,255,255,.04); border:1px solid rgba(255,255,255,.08); border-radius:12px; }
+    .monosmall { font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace; font-size:12px; }
+    .muted { color:#a7afc0; }
+    .path { font-weight:700; }
+
+    input[type="text"], input[type="password"] {
+      width:280px; background:#0a0e15; border:1px solid rgba(255,255,255,.12);
+      color:#e8edf5; padding:8px 12px; border-radius:10px; outline:none;
+    }
+    input[type="text"]:focus, input[type="password"]:focus {
+      box-shadow:0 0 0 4px rgba(59,130,246,.35);
+    }
+
+    .btn {
+      background:#3b82f6; border:0; color:white; font-weight:700; padding:10px 16px;
+      border-radius:12px; cursor:pointer;
+    }
+    .btn.secondary { background:rgba(255,255,255,.10); color:#e5e7eb; }
+
+    #drop {
+      border:2px dashed rgba(255,255,255,.18); border-radius:14px; padding:18px; text-align:center;
+    }
+    .progressbar { height:6px; background:rgba(255,255,255,.12); border-radius:6px; overflow:hidden; margin-top:8px; }
+    .progressbar > span { display:block; height:100%; background:#3b82f6; width:0%; transition: width .2s ease; }
+    #logoutBtn { margin-left:auto; }
+  </style>
+</head>
+<body>
+  <header class="topbar">
+    <div class="container topbar-inner">
+      <a class="brand" href="index.html"><img src="img/logo-full.png" alt="logo" /></a>
+      <nav class="nav">
+        <a href="index.html">Home</a>
+        <a href="shows.html">Shows</a>
+      </nav>
+      <div class="flex-grow"></div>
+      <button id="logoutBtn" class="btn secondary">Logout</button>
+    </div>
+  </header>
+
+  <main class="admin-wrap">
+    <h1>Admin — R2 Browser & Uploader</h1>
+
+    <!-- Login -->
+    <section id="login" class="cardx">
+      <h3>Login</h3>
+      <div class="rowx">
+        <input id="adminUser" type="text" placeholder="Username" autocomplete="username" />
+        <input id="adminPass" type="password" placeholder="Password" autocomplete="current-password" />
+        <button id="loginBtn" class="btn">Sign In</button>
+        <span class="muted" id="loginMsg"></span>
+      </div>
+    </section>
+
+    <!-- Controls -->
+    <section id="controls" class="cardx" style="display:none">
+      <div class="rowx">
+        <span>Path:</span>
+        <input id="path" type="text" value="" placeholder="e.g. Reese_s/The Pepperonis/Season 3/" />
+        <button id="loadBtn" class="btn secondary">Load</button>
+        <span class="muted">Use trailing “/” for folders.</span>
+        <span class="muted" id="whoami" style="margin-left:auto"></span>
+      </div>
+    </section>
+
+    <!-- Listing -->
+    <section id="listing" class="cardx" style="display:none">
+      <div class="rowx">
+        <h3 style="margin:0">Objects</h3>
+        <button id="refreshBtn" class="btn secondary" style="margin-left:auto">Refresh</button>
+      </div>
+      <div id="list" class="grid"></div>
+    </section>
+
+    <!-- Uploader -->
+    <section id="uploader" class="cardx" style="display:none">
+      <h3>Upload files</h3>
+      <div id="drop">
+        <p>Drag & drop files here or <input type="file" id="filePick" multiple /></p>
+        <p class="muted">Large files are uploaded using multipart upload via the Worker.</p>
+      </div>
+      <div id="uploads" style="margin-top:12px"></div>
+    </section>
+  </main>
+
+  <!-- Loads the admin logic that talks to your Worker -->
+  <script src="admin.js" defer></script>
+</body>
+</html>
